# ImageProcessing

./: .gitignore  CMakeLists.txt  main.cpp
include/: matplotlibcpp.h
